--- a/lighthouse-frontend/package.json
+++ b/lighthouse-frontend/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.2.10",
     "leaflet": "^1.9.4",
+    "pigeon-maps": "^0.21.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
