--- a/.github/workflows/main_faros-backend.yml
+++ b/.github/workflows/main_faros-backend.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# This should operate in the /lighthouse-backend directory
 name: Build and deploy container app to Azure Web App - faros-backend
 
 on:
@@ -34,7 +31,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_2afb8b6a9eed492d8c20c83a9ede8481 }}/faluciano/faros-backend:${{ github.sha }}
+          tags: ${{ secrets.AzureAppService_ContainerUsername_2afb8b6a9eed492d8c20c83a9ede8481 }}/faluciano/faros-backend:${{ github.sha }}
           file: ./dockerfile
 
   deploy:
@@ -52,4 +49,4 @@ jobs:
           app-name: "faros-backend"
           slot-name: "production"
           publish-profile: ${{ secrets.AzureAppService_PublishProfile_140473bef51b4b42abc323aa8d968cc9 }}
-          images: "index.docker.io/${{ secrets.AzureAppService_ContainerUsername_2afb8b6a9eed492d8c20c83a9ede8481 }}/faluciano/faros-backend:${{ github.sha }}"
+          images: ${{ secrets.AzureAppService_ContainerUsername_2afb8b6a9eed492d8c20c83a9ede8481 }}/faluciano/faros-backend:${{ github.sha }}
