--- a/.github/workflows/main_faros-backend.yml
+++ b/.github/workflows/main_faros-backend.yml
@@ -32,7 +32,8 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.AzureAppService_ContainerUsername_2afb8b6a9eed492d8c20c83a9ede8481 }}/faluciano/faros-backend:${{ github.sha }}
-          file: ./dockerfile
+          file: lighthouse-backend/dockerfile # Ensure this path is correct
+          context: ./lighthouse-backend # Added context to specify build directory
 
   deploy:
     runs-on: ubuntu-latest
