--- a/.github/workflows/main_faros-backend.yml
+++ b/.github/workflows/main_faros-backend.yml
@@ -34,6 +34,9 @@ jobs:
           tags: ${{ secrets.AzureAppService_ContainerUsername_2afb8b6a9eed492d8c20c83a9ede8481 }}/faluciano/faros-backend:${{ github.sha }}
           file: lighthouse-backend/dockerfile # Ensure this path is correct
           context: ./lighthouse-backend # Added context to specify build directory
+          build-args: |
+            SUPABASE_URL=${{ secrets.SUPABASE_URL }}
+            SUPABASE_KEY=${{ secrets.SUPABASE_KEY }}
 
   deploy:
     runs-on: ubuntu-latest
