--- a/lighthouse-backend/dockerfile
+++ b/lighthouse-backend/dockerfile
@@ -1,6 +1,9 @@
 # Use an official Golang runtime as a parent image
 FROM golang:1.22-alpine AS build
 
+ENV SUPABASE_URL=$SUPABASE_URL
+ENV SUPABASE_KEY=$SUPABASE_KEY
+ENV POERT=$PORT
 
 # Set the Current Working Directory inside the container
 WORKDIR /app
